<resources>
    <string name="acesso_do_cliente">Acesso do Cliente</string>
    <string name="acesso_gerente">Acesso do Gerente</string>
    <string name="acompanhamento_chamada_senhas">Acompanhamento da Chamada de Senhas</string>
    <string name="action_settings">Settings</string>
    <string name="apagar_minha_senha_atual">Apagar Minha Senha Atual</string>
    <string name="app_name">GEFI - Gerenciador de Filas</string>
    <string name="automatico">Automático</string>
    <string name="atualizar">Atualizar</string>
    <string name="chamando_senha">Chamando senha:</string>
    <string name="chamar_proxima_senha">Chamar Próxima Senha</string>
    <string name="config_endereco_servico_senhas">configEnderecoServicoSenhas</string>
    <string name="config_monitoramento_automatico">configMonitoramentoAutomatico</string>
    <string name="config_senha_usuario">configSenhaUsuario</string>
    <string name="configuracoes">Configurações</string>
    <string name="configuracoes_salvas">Configurações salvas!</string>
    <string name="endereco_invalido">Endereço inválido!</string>
    <string name="endereco_servico_senhas">Endereço do Serviço de Senhas</string>
    <string name="endereco_servico_senhas_nao_configurado">Endereço do Serviço de Senhas Não Configurado</string>
    <string name="exemplo_endereco_servico_senhas">Ex.: http://192.168.3.100:8080/gefi-server</string>
    <string name="erro_gerar_senha">Erro ao gerar senha.</string>
    <string name="gerar_senha_normal">Gerar Senha Normal</string>
    <string name="gerar_senha_preferencial">Gerar Senha Preferencial</string>
    <string name="manual">Manual</string>
    <string name="manual_automatico">Manual/Automático</string>
    <string name="modo_monitoramento">Modo de Monitoramento</string>
    <string name="monitoramento_automatico">Monitoramento Automático</string>
    <string name="nenhuma_senha_chamada_ate_momento">Nenhuma senha chamada até o momento.</string>
    <string name="nenhuma_senha_na_fila">Nenhuma Senha na Fila</string>
    <string name="ocorreu_erro_contate_suporte">Ocorreu um erro, contate o suporte.</string>
    <string name="reiniciar_senha_normal">Reiniciar Senha Normal</string>
    <string name="reiniciar_senha_preferencial">Reiniciar Senha Preferencial</string>
    <string name="salvar">Salvar</string>
    <string name="senha_normal_reiniciada">Senha Normal Reiniciada!</string>
    <string name="senha_preferencial_reiniciada">Senha Preferencial Reiniciada!</string>
    <string name="sua_senha">Sua Senha:</string>
    <string name="title_activity_cliente">Acesso do Cliente</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="title_activity_gerente">Acesso do Gerente</string>
    <string name="title_activity_monitoramento">Acompanhamento da Chamada de Senhas</string>
    <string name="ultima_senha_chamada">Última Senha Chamada</string>
    <string name="senha_reiniciada">Senha reiniciada!</string>
</resources>
