<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acesso_do_cliente"
        android:id="@+id/btAcessoCliente"
        android:layout_gravity="center_horizontal"
        android:onClick="abrirAcessoDoCliente" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acesso_gerente"
        android:id="@+id/btAcessoGerente"
        android:layout_gravity="center_horizontal"
        android:onClick="abrirAcessoDoGerente" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acompanhamento_chamada_senhas"
        android:id="@+id/btAcompanhamentoSenhas"
        android:layout_gravity="center_horizontal"
        android:onClick="abrirAcompanhamentoDaChamadaDeSenhas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracoes"
        android:id="@+id/btConfiguracoes"
        android:layout_gravity="center_horizontal"
        android:onClick="abrirConfiguracoes" />
</LinearLayout>
