<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MonitoramentoActivity"
    tools:showIn="@layout/activity_monitoramento"
    android:orientation="vertical"
    android:weightSum="1"
    android:textAlignment="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sua_senha"
        android:id="@+id/tvMensagemSenhaUsuario"
        android:layout_gravity="center_horizontal"
        android:background="#d9edf7"
        android:textAlignment="center"
        android:textColor="#31708f" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvCodigoSenhaUsuario"
        android:layout_gravity="center_horizontal"
        android:textColor="#31708f"
        android:background="#d9edf7"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:id="@+id/spDivisor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar"
        android:id="@+id/btAtualizar"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBuscarUltimaSenhaChamada" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/monitoramento_automatico"
        android:id="@+id/tvMonitoramentoAutomatico"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_red_dark"
        android:textAlignment="center"
        android:background="#fcf8e3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ultima_senha_chamada"
        android:id="@+id/tvMensagemUltimaSenhaChamada"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:background="#fcf8e3"
        android:textColor="#8a6d3b" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvCodigoUltimaSenhaChamada"
        android:layout_gravity="center_horizontal"
        android:textColor="#8a6d3b"
        android:textAlignment="center"
        android:background="#fcf8e3"
        android:visibility="gone" />
</LinearLayout>
