<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.GerenteActivity"
    tools:showIn="@layout/activity_gerente"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chamar_proxima_senha"
        android:id="@+id/btChamarProximaSenha"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickChamarProximaSenha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar_senha_preferencial"
        android:id="@+id/btReiniciarSenhaPreferencial"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickReiniciarSenhaPreferencial" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar_senha_normal"
        android:id="@+id/btReiniciarSenhaNormal"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickReiniciarSenhaNormal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvMensagemUltimaSenhaChamada"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:textColor="#31708f"
        android:background="#d9edf7"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvCodigoUltimaSenhaChamada"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:textColor="#31708f"
        android:background="#d9edf7"
        android:textAlignment="center" />
</LinearLayout>
